# storage/api-docs/api-docs.json
@@ -286,6 +286,95 @@
                 ]
             }
         },
+        "/api/comment/create": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Write your comment",
+                "operationId": "commentCreate",
+                "requestBody": {
+                    "description": "Input data format",
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "properties": {
+                                    "client_id": {
+                                        "description": "write your client id(select option)",
+                                        "type": "integer"
+                                    },
+                                    "driver_id": {
+                                        "description": "write your driver id(select option)",
+                                        "type": "integer"
+                                    },
+                                    "order_id": {
+                                        "description": "write your order id(select option)",
+                                        "type": "integer"
+                                    },
+                                    "text": {
+                                        "description": "write your text message",
+                                        "type": "string"
+                                    },
+                                    "score": {
+                                        "description": "write your score",
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/api/comment/my-comments": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Finds Pets by status",
+                "description": "Multiple status values can be provided with comma separated string",
+                "operationId": "myComments",
+                "parameters": [
+                    {
+                        "name": "status",
+                        "in": "query",
+                        "description": "Status values that needed to be considered for filter",
+                        "required": true,
+                        "explode": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "available",
+                            "enum": [
+                                "available",
+                                "pending",
+                                "sold"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Invalid status value"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
         "/api/users/show": {
             "get": {
                 "tags": [
